<resources>
    <string name="app_name">Myfamily</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="incase">In case emergency keep telling family contact me</string>
    <string name="guard">GUARD</string>
    <string name="gaurddetail">open when you are on a pototially dangerous journey</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>