<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#e4e7e8"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/security"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pinnkcard"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#ee717a"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/greencard"
        app:layout_constraintTop_toBottomOf="@id/textview"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:elevation="16dp"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        app:layout_constraintStart_toStartOf="@+id/pinnkcard"
        app:layout_constraintTop_toTopOf="@+id/pinnkcard"
        android:textColor="@color/white"
        android:id="@+id/sos_text"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/incase"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pinnkcard"
        app:layout_constraintTop_toBottomOf="@+id/sos_text" />

    <ImageView
        android:contentDescription="@string/todo"
        android:id="@+id/sos_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="@+id/pinnkcard"
        app:layout_constraintBottom_toBottomOf="@+id/pinnkcard"
        android:src="@drawable/ic_sos"
        app:layout_constraintEnd_toEndOf="@id/pinnkcard" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/greencard"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#63d2c7"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/pinnkcard" />
    <TextView
        android:elevation="16dp"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        app:layout_constraintStart_toStartOf="@+id/greencard"
        app:layout_constraintTop_toTopOf="@+id/greencard"
        android:textColor="@color/white"
        android:id="@+id/guard_text"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gaurddetail"
        android:elevation="16dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="@id/greencard"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintTop_toBottomOf="@+id/guard_text"
        />

    <ImageView
        android:contentDescription="@string/todo"
        android:id="@+id/guard_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="@+id/greencard"
        app:layout_constraintBottom_toBottomOf="@+id/greencard"
        android:src="@drawable/guard"
        app:layout_constraintEnd_toEndOf="@id/greencard" />


</androidx.constraintlayout.widget.ConstraintLayout>